fix and improve mgm countdown
Countdown now displays in chat again and additionally displays in the (sub)title text

Related tangent on the Minigamer interface refactor: I need to rewrite how OptionalPlayerLike's default implementations of Audience works... instead of doing the overrides myself, I should rely on adventure's ForwardingAudience.Single (the interface I'm now using in Minigamer since 1.17 Parchment is EOL) and just return an empty implementation of Audience from the #audience method if the player is not online